log
Fri, Mar 21, 2025  2:49:24 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  3:05:23 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|4
total_score: 10/70
8ae3602
Fri, Mar 21, 2025  3:07:59 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:4: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
    if (L = NULL) return 0;
    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
e70c4a6
Fri, Mar 21, 2025  3:08:13 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ac0d952
Fri, Mar 21, 2025  3:10:20 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9d0a524
Fri, Mar 21, 2025  3:12:57 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|2
total_score: 40/70
3f45e08
Fri, Mar 21, 2025  3:19:32 PM: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|1
total_score: 50/70
b5ba81d
Fri, Mar 21, 2025  3:26:26 PM: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:147:11: error: return makes integer from pointer without a cast [-Werror=int-conversion]
    return pop(pila);
           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
364dbad
Fri, Mar 21, 2025  3:27:22 PM: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
8b12fac
